<resources>
    <string name="app_name">SmoxTrimsetters</string>
    <string name="facebook_app_id">2491808960885470</string>
    <string name="fb_login_protocol_scheme">fb2491808960885470</string>
    <string name="facebook_client_token">42baf8144d4340c445b4751703be116d</string>
    <string name="sender_id">768706859889</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyAcT5skfyEGHN3Mn5h3yubSzqxTYO41lUc
    </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_tack">City Tack</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="activity_title_main">Filters</string>
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>
    <string name="ok">OK</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="Ltinerary">ltinerary</string>
    <string name="Budget">budget</string>
    <string name="People">People</string>
    <string name="Polls">Polls</string>
    <string name="GroupChat">Group Chat</string>
    <string name="Suggestion">Suggestions</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_next">NEXT</string>
    <string name="action_open">OPEN</string>
    <string name="need_permission_to_access">Need permission to access this page</string>
    <string name="storage_permission_access">Now you have a permission to access storage</string>
    <string name="camera_permission_access">Now you have a permission to access camera</string>
    <string name="camera_permission_denied">Camera permission request was denied.</string>
    <string name="storage_camera_permisssion">Now you have a permission to access camera and storage</string>
    <string name="location_permission_access">Now you have a permission to access location</string>
    <string name="location_permission_denied">Location permission request was denied.</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="select_user">You can\'t create a chat with this user, who is not registered on the chat server.
    </string>
    <string name="dlg_error">Error</string>
    <string name="dlg_ok">OK</string>
    <string name="error_parsing_configs">Parsing sample\'s configs error</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="continue_with_social">Continue with social</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="or">or</string>
    <string name="login_using_email_or_phone">Login using email or phone</string>
    <string name="remindLater">Remind me later</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign up</string>
    <string name="todo">TODO</string>
    <string name="phone_or_email_address">Phone or Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="customer">Customer</string>
    <string name="barber">Styler</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot">FORGOT</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="login">Login</string>
    <string name="title_activity_forgot">ForgotActivity</string>
    <string name="forgot_password_instruction">Please enter your email and we will send instructions to recover your
        account.
    </string>
    <string name="submit">Submit</string>
    <string name="have_an_account">Have an account?</string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="terms">Terms</string>
    <string name="and">and</string>
    <string name="policy">Policy</string>
    <string name="title_activity_barber_main">BarberMainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="calendar">Calendar</string>
    <string name="funds">Funds</string>
    <string name="upnext">Up Next</string>
    <string name="smoxtalk">SmoxTalk</string>
    <string name="my_barber">My Styler</string>
    <string name="supplies_coming">Supplies(coming...)</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="contact_us">Contact Us</string>
    <string name="verify">Verify</string>
    <string name="verified">Verified</string>
    <string name="appointment">APPOINTMENTS</string>
    <string name="cal_appointment">APPOINTMENT</string>
    <string name="cal_events">EVENTS</string>
    <string name="cal_event">EVENT</string>
    <string name="wait_list">WAIT LIST</string>
    <string name="n_a">N/A</string>
    <string name="up_next">UP NEXT</string>
    <string name="last_client">LAST CLIENT</string>
    <string name="recent">RECENT</string>
    <string name="favorites">Favorites</string>
    <string name="group">GROUP</string>
    <string name="contacts">CONTACTS</string>
    <string name="title_activity_group">Create Group</string>
    <string name="add">Add</string>
    <string name="group_name">Group Name</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="search_friends_by_name">Search friends by name</string>
    <string name="search_service_by_name">Search by Styler, Style or Location</string>
    <string name="edit_account">Edit Account</string>
    <string name="change">change</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="permission_title_rationale">Permission needed</string>
    <string name="permission_read_storage_rationale">Storage read permission is needed to pick files.</string>
    <string name="permission_write_storage_rationale">Storage write permission is needed to save the image.</string>
    <string name="permission_read_contacts_rationale">CONTACTS permission allows us to Access CONTACTS app.</string>
    <string name="toast_cannot_retrieve_selected_image">Cannot retrieve selected image</string>
    <string name="toast_cannot_retrieve_cropped_image">Cannot retrieve cropped image</string>
    <string name="toast_unexpected_error">Unexpected error</string>
    <string name="label_select_picture">Select Picture</string>
    <string name="label_select_video">Select Video</string>
    <string name="cancel">Cancel</string>
    <string name="send_payment_request">Request Payment</string>
    <string name="pay_now">Pay Now</string>
    <string name="booking_preferences">Booking Preferences</string>
    <string name="social_media">Social Media</string>
    <string name="mobile_pay">Mobile Pay</string>
    <string name="location">Location</string>
    <string name="about_me">About Me</string>
    <string name="reviews_ratings"><![CDATA[Reviews & Ratings]]></string>
    <string name="title_activity_booking_preference">Booking Preferences</string>
    <string name="your_photo">Your Photo</string>
    <string name="your_logo">Your Logo</string>
    <string name="hours_of_operation">Hours Of Operation</string>
    <string name="title_activity_service_edit">Add Service</string>
    <string name="haircut">Haircut</string>
    <string name="price">Price</string>
    <string name="mins">mins</string>
    <string name="clean">Cleanliness</string>
    <string name="work">Work</string>
    <string name="behave">Behaviour</string>
    <string name="description">Description</string>
    <string name="title_activity_social_media">Social Media</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="title_activity_social_link_edit">SocialLinkEditActivity</string>
    <string name="title_activity_bio">Write a short bio</string>
    <string name="format_minute">%d mins</string>
    <string name="format_price">$%.02f</string>
    <string name="format_ship_price">+$%.02f</string>
    <string name="format_disc_price">-$%.02f</string>
    <string name="format_rating">%d Rating</string>
    <string name="format_ratings">(%.1f) %d Ratings</string>
    <string name="format_ratingss">(%.1f) </string>
    <string name="format_ratingsss">%.1f </string>
    <string name="format_two_digit">%02d </string>
    <string name="format_time">Time: %s</string>
    <string name="format_date">Date: %s</string>
    <string name="format_username"><font color='green'>$</font><font color='white'>%s</font></string>
    <string name="format_open_time">%1$s to %2$s</string>
    <string name="format_quantity">%d</string>
    <string name="format_fee">%d%%</string>
    <string name="format_event">Event: %s</string>
    <string name="format_start_at">Start: %s</string>
    <string name="format_end_at">End: %s</string>
    <string name="stockAvail">Stocks available: %d</string>
    <string name="price_txt">$%1$s</string>
    <string name="title_activity_base_image_picker">BaseImagePickerActivity</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="more">more</string>
    <string name="title_activity_appointment_detail">Appointment</string>
    <string name="contact">CONTACT</string>
    <string name="official_date">Official Date</string>
    <string name="approved">Approved</string>
    <string name="services">Services</string>
    <string name="services_colon">Services:</string>
    <string name="edit_booking">Edit Booking</string>
    <string name="complete">Complete</string>
    <string name="barber_search">Search</string>
    <string name="appointments">Appointments</string>
    <string name="products_coming">Products</string>
    <string name="completed">Completed</string>
    <string name="appointment_complete_confirm">The appointment has been completed \nor\ndoes the client fail to be present
        for the time of the scheduled services?
    </string>
    <string name="done">Done</string>
    <string name="no_show">No Show</string>
    <string name="events">Events</string>
    <string name="nav_upnext">UP NEXT</string>
    <string name="nav_calendar">CALENDAR</string>
    <string name="nav_smoxtalk">SMOXTALK</string>
    <string name="nav_my_barber">MY STYLER</string>
    <string name="nav_products">PRODUCTS</string>
    <string name="nav_my_orders">MY ORDERS</string>
    <string name="nav_edit_account">EDIT ACCOUNT</string>
    <string name="nav_about_us">ABOUT US</string>
    <string name="nav_contact_us">CONTACT US</string>
    <string name="nav_logout">LOGOUT</string>
    <string name="subscription">Subscription</string>
</resources>