<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/menu_upnext"
        android:icon="@drawable/ic_appointments"
        android:title="@string/nav_upnext" />
    <item
        android:id="@+id/menu_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />
    <item
        android:id="@+id/menu_smox_talk"
        android:icon="@drawable/ic_smoxtalk"
        android:title="@string/nav_smoxtalk" />
    <item
        android:id="@+id/menu_my_barber"
        android:icon="@drawable/ic_my_barber"
        android:title="@string/nav_my_barber" />
    <item
        android:id="@+id/menu_supplies"
        android:icon="@drawable/ic_supplies"
        android:title="@string/nav_products" />

    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/ic_supplies"
        android:title="@string/nav_my_orders" />

    <item
        android:id="@+id/menu_edit_account"
        android:icon="@drawable/ic_edit_account"
        android:title="@string/nav_edit_account" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about_us"
        android:title="@string/nav_about_us" />
    <item
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/nav_contact_us" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/nav_logout" />

</menu>