<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">
    <item
            android:id="@+id/menu_barber_serach"
            android:icon="@drawable/ic_barber_search"
            android:title="@string/barber_search"/>
    <item
        android:id="@+id/menu_appointments"
        android:icon="@drawable/ic_calendar"
        android:title="@string/appointments"/>

    <item
        android:id="@+id/menu_services"
        android:icon="@drawable/ic_unlike"
        android:title="@string/favorites"/>

    <item
            android:id="@+id/menu_events"
            android:icon="@drawable/ic_event"
            android:title="@string/events"/>

    <item
        android:id="@+id/menu_supplies"
        android:icon="@drawable/ic_supplies"
        android:title="@string/products_coming"/>
    <item
        android:id="@+id/menu_edit_account"
        android:icon="@drawable/ic_edit_account"
        android:title="@string/edit_account"/>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about_us"
        android:title="@string/about_us"/>
    <item
        android:id="@+id/menu_contact"
        android:icon="@drawable/ic_contact_us"
        android:title="@string/contact_us"/>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>

</menu>