<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyle"
            android:layout_width="match_parent"
            android:padding="@dimen/default_margin"
            android:text="@string/change_password"
            android:textSize="@dimen/title_font_size"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/appBarLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_screen_margin"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/txtPassword"
                    style="@style/EditStyle"
                    android:layout_marginTop="@dimen/default_margin"
                    android:autofillHints="@string/email_address"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/txtNewPassword"
                    style="@style/EditStyle"
                    android:layout_marginTop="@dimen/default_margin"
                    android:autofillHints="@string/email_address"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    tools:targetApi="o" />

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    style="@style/EditStyle"
                    android:layout_marginTop="@dimen/default_margin"
                    android:autofillHints="@string/email_address"
                    android:hint="@string/retype_password"
                    android:inputType="textPassword"
                    tools:targetApi="o" />

                <Button
                    android:id="@+id/btnSignUp"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/margin_fifty"
                    android:text="@string/action_save"
                    android:textAllCaps="true"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>