<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/dialog_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="1">
        <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/appointment"
                android:textColor="@color/black"
                android:textAlignment="center" />
        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/appointment_complete_confirm"
            android:textColor="@color/dark_gray"
            android:textAlignment="center" />

        <Button
                android:id="@+id/btnComplete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_black"
                android:text="@string/completed"
                android:textColor="@color/white" />

        <Button
            android:id="@+id/btnNoShow"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_black"
            android:text="@string/no_show"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_black"
            android:text="@string/done"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/dialog_logo">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/ic_edit"
            />
    </RelativeLayout>

</RelativeLayout>